@@ -19,26 +19,33 @@
 
 /**
  * lookup()
- * see lookup3.c
  **/
 
 #include "system.h"
 #include <assert.h>
 
-/* comment out to use Jenkins hash function */
-#define SFHASH 1
+#ifdef HAVE_SFHASH
+  extern uint32_t SuperFastHash(const char * data, int len, uint32_t hash);
+#elif HAVE_LOOKUP3
+#if LITTLE_ENDIAN
+  extern uint32_t hashlittle(const void *key, size_t length, uint32_t initval);
+#elif BIG_ENDIAN
+  extern uint32_t hashbig(const void *key, size_t length, uint32_t initval);
+#endif
+#else
+#error No hashing function found.
+#endif
 
 uint32_t lookup(uint8_t *k,  uint32_t length,  uint32_t initval)
 {
-#if SFHASH
-  extern uint32_t SuperFastHash(const char * data, int len, uint32_t hash);
+#ifdef HAVE_SFHASH
   return SuperFastHash((const char*)k, length, initval);
-#elif LITTLE_ENDIAN
-  extern uint32_t hashlittle(const void *key, size_t length, uint32_t initval);
+#elif HAVE_LOOKUP3
+#if LITTLE_ENDIAN
   return hashlittle(k, length, initval);
 #elif BIG_ENDIAN
-  extern uint32_t hashbig(const void *key, size_t length, uint32_t initval);
   return hashbig(k, length, initval);
+#endif
 #endif
 }
 
